fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ p {
   line-height: 2rem;
 }
 
+a{
+	line-height: 35px;
+}
+
 .sidenav-trigger {
   color: #26a69a;
 }
@@ -47,6 +51,7 @@ p {
 
 .logo-text{
 	height: 10px;
+	line-height: 64px;
 }
 
 hr {
@@ -60,7 +65,11 @@ hr {
 }
 
 #fort-text{
-	margin-top: 95px;
+	margin-top: 10px;
+}
+
+#pen-text {
+    margin-top: 70px;
 }
 
 #umg-img{
@@ -72,8 +81,50 @@ hr {
 	margin-top: 24px;
 }
 
+#knight-img {
+    height: 140px;
+}
+
+#pen-img {
+    height: 140px;
+}
+
 #forrest1{
 	bottom: 104px;
+}
+
+@media only screen and (max-width : 600px) {
+	.row .col {
+		float: none;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		padding: 0 0.75rem;
+		min-height: 1px;
+	}
+	#pen-text {
+		margin-top: 30px;
+	}
+	#shutter-text {
+		margin-top: 30px;
+	}
+}
+
+@media only screen and (max-width : 1200px) {
+	.col1 {
+		float: none !important;
+		-webkit-box-sizing: border-box !important;
+		box-sizing: border-box !important;
+		padding: 0 0.75rem !important;
+		min-height: 1px !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
+	}
+	#umg-text{
+		margin-top: 50px;
+	}
+	#fort-text {
+		margin-top: 35px;
+	}
 }
 
 .git{
@@ -102,7 +153,7 @@ hr {
     bottom: -20%;
     /* right: 00px !important; */
     height: auto;
-    min-width: 1000px !important;
+    min-width: 1300px !important;
     min-height: 100%;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
